--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>MavenProjectSample</groupId>
-    <artifactId>MavenProjectSample</artifactId>
+    <groupId>CodeLab</groupId>
+    <artifactId>Codelab</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
@@ -107,13 +107,16 @@
 
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <!--<version>2.4</version>-->
                 <version>2.2</version>
                 <executions>
                     <execution>
                         <id>make-assembly</id>
+                        <!--<id>copy-dependencies</id>-->
                         <phase>package</phase>
                         <goals>
                             <goal>single</goal>
+                            <!--<goal>copy-dependencies</goal>-->
                         </goals>
                         <configuration>
                             <appendAssemblyId>false</appendAssemblyId>
